lsp: Fix diagnostic.code parsing

diagnostic.code can be an int or string

BUG: 473725